--- a/src/app/shared/nav/nav.component.html
+++ b/src/app/shared/nav/nav.component.html
@@ -3,9 +3,10 @@
     [mode]="(isHandset$ | async) ? 'over' : 'side'" [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item href="#">This Week</a>
-      <a mat-list-item href="#">History</a>
-      <a mat-list-item href="#">About</a>
+      <a mat-list-item [routerLink]="['/home']" routerLinkActive="link-active"
+        [routerLinkActiveOptions]="{exact:true}">This Week</a>
+      <a mat-list-item [routerLink]="['/home']" routerLinkActive="link-active">History</a>
+      <a mat-list-item [routerLink]="['/home']" routerLinkActive="link-active">About</a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
