--- a/src/app/shared/nav/nav.component.scss
+++ b/src/app/shared/nav/nav.component.scss
@@ -15,3 +15,15 @@
   top: 0;
   z-index: 1;
 }
+
+.sidenav__navbar--right {
+  display: flex;
+  justify-content: space-between;
+}
+
+mat-nav-list > a,
+mat-toolbar,
+.mat-nav-list--right {
+  display: flex;
+  justify-content: flex-end;
+}
